add vue.js index
